[gd_scene load_steps=2 format=3 uid="uid://victoryscreen001"]

[ext_resource type="Script" path="res://scripts/VictoryScreen.gd" id="1"]

[node name="VictoryScreen" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1")

[node name="ColorRect" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.05, 0.15, 0.05, 1)

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -200.0
offset_top = -150.0
offset_right = 200.0
offset_bottom = 150.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 20
alignment = 1

[node name="VictoryLabel" type="Label" parent="VBoxContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(0.4, 1, 0.4, 1)
theme_override_font_sizes/font_size = 48
text = "VICTORY!"
horizontal_alignment = 1

[node name="MessageLabel" type="Label" parent="VBoxContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(0.4, 1, 0.4, 1)
theme_override_font_sizes/font_size = 20
text = "WORM ELIMINATED"
horizontal_alignment = 1

[node name="Spacer1" type="Control" parent="VBoxContainer"]
custom_minimum_size = Vector2(0, 20)
layout_mode = 2

[node name="ScoreLabel" type="Label" parent="VBoxContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(1, 0.8, 0.2, 1)
theme_override_font_sizes/font_size = 28
text = "FINAL SCORE: 0"
horizontal_alignment = 1

[node name="HighScoreLabel" type="Label" parent="VBoxContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(1, 0.8, 0.2, 1)
theme_override_font_sizes/font_size = 24
text = "HIGH SCORE: 0"
horizontal_alignment = 1

[node name="Spacer2" type="Control" parent="VBoxContainer"]
custom_minimum_size = Vector2(0, 20)
layout_mode = 2

[node name="RestartButton" type="Button" parent="VBoxContainer"]
custom_minimum_size = Vector2(250, 50)
layout_mode = 2
theme_override_font_sizes/font_size = 20
text = "RESTART"

[node name="MainMenuButton" type="Button" parent="VBoxContainer"]
custom_minimum_size = Vector2(250, 50)
layout_mode = 2
theme_override_font_sizes/font_size = 20
text = "MAIN MENU"

[node name="CloseButton" type="Button" parent="VBoxContainer"]
custom_minimum_size = Vector2(250, 50)
layout_mode = 2
theme_override_font_sizes/font_size = 20
text = "QUIT"